2009-08-25  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc (talker): Track real vs fake-positive match result
	and cache only real results in the real tracker.

2009-08-20  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc (verbose): New variable.
	(options, parse_opt): Add --verbose/-l to set it.
	(talker): Keep going after mismatches when verbose.

2009-08-19  Roland McGrath  <roland@redhat.com>

	Diagnose reference mismatches with more detail.
	* dwarfcmp.cc (talker::reference_mismatch): New method.
	(talker::mismatch): Call it.

	* dwarfcmp.cc (talker): Update constructor for tracker changes.

2009-08-16  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc (main): Call dwarf_end before return, for happy valgrind.

2009-07-06  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc (test_writer): Make it an int.
	(parse_opt): Make -T increment it.
	(main): Test only dwarf_output for -T, only dwarf_edit for -TT,
	both only for -TTT.

2009-07-03  Roland McGrath  <roland@redhat.com>

	* Makefile.am (AM_CXXFLAGS): Drop -Wno-unused-parameter.

	* dwarfcmp.cc (open_file): Exit 77 for no DWARF under -T.

2009-07-02  Roland McGrath  <roland@redhat.com>

	* dwarflint-hl.cc (operator<<): dwarf::VS_unit_reference is gone.

	* dwarfcmp.cc (main): Update -T constructors using tracker.
	Instantiate and test dwarf_output for -T too.

2009-07-01  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc (talker): Update constructor parameters.

2009-06-19  Roland McGrath  <roland@redhat.com>

	* dwarfcmp.cc: Revamp using dwarf_comparator.

	* dwarflint-expected-at.cc: Include <config.h> first.
	* dwarflint-expected.hh (expected_map::expectation_map):
	Use dwarf::tags.
	(to_string): Function removed.
	* dwarflint-hl.cc (recursively_validate): Don't use it.

	* dwarflint.c (abbrev_table_load): No-op control flow fiddle
	silences gcc-4.4 -O3 warning.

2009-04-02  Roland McGrath  <roland@redhat.com>

	* Makefile.am (noinst_HEADERS): Add dwarfstrings.h here.