@@ -1,0 +1,4 @@
+dwarfcmp=../src/dwarfcmp-test
+try_switches=-iT
+
+. $srcdir/run-dwarfcmp-self.sh
